# cargo-temp

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md  config_template.toml
.github/: FUNDING.yml
.github/workflows/: main.yml  pr.yml  release.yml  rust.yml  sanity.yml  update.yml
bindings/: Cargo.toml
cargo-temp-bindings/: Cargo.toml  build.rs
cargo-temp-bindings/src/: lib.rs
src/: benchmarking.rs  binding.rs  cli.rs  config.rs  dependency.rs  generate.rs  lib.rs  main.rs  project.rs  run.rs  subprocess.rs
src/dependency/: tests.rs
