[package]
name = "cargo-temp"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI tool that allow you to create a temporary new rust project using cargo with already installed dependencies"
repository = "https://github.com/yozhgoor/cargo-temp"
homepage = "https://github.com/yozhgoor/cargo-temp"
documentation = "https://docs.rs/cargo-temp"
readme = "README.md"
keywords = ["cargo", "temporary", "project", "cli", "dependencies"]
categories = ["development-tools::cargo-plugins"]
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]

[dependencies]
anyhow = "1"
cargo-generate = { version = "0.22", optional = true }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tempfile = "3.10"
toml = "0.8"
regex = "1.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
xdg = "2.5"

[target.'cfg(windows)'.dependencies]
dirs = "5.0"
