[package]
name = "cargo-temp"
version = "0.3.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Create temporary Rust project with specified dependencies"
repository = "https://github.com/yozhgoor/cargo-temp"
homepage = "https://github.com/yozhgoor/cargo-temp"
documentation = "https://docs.rs/cargo-temp"
readme = "README.md"
keywords = ["cargo", "temporary", "project", "cli", "dependencies"]
categories = ["development-tools::cargo-plugins"]
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.9"
regex = "1.12"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
xdg = "3"

[target.'cfg(windows)'.dependencies]
dirs = "6"
CreateProcessW = "0.1"

[dev-dependencies]
pastey = "0.2"
